--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/lvbenson/opt/anaconda3/bin/python"
+    "python.pythonPath": "C:\\Users\\Daniel\\anaconda3\\envs\\AML-env\\python.exe"
 }
